[gd_scene load_steps=9 format=3 uid="uid://vlfxe251fi0g"]

[ext_resource type="Script" path="res://scripts/screens/MainMenu.gd" id="1_sdm67"]
[ext_resource type="FontFile" uid="uid://cxwlpyc5xa31h" path="res://resources/fonts/Daydream.ttf" id="2_8vbhj"]
[ext_resource type="FontFile" uid="uid://c8uq0vrdeg2pf" path="res://resources/fonts/shit.ttf" id="3_0mm4n"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6d8oi"]
sky_top_color = Color(0.0745098, 0.0980392, 0.129412, 1)
sky_horizon_color = Color(0, 0, 0, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_pwl78"]
sky_material = SubResource("ProceduralSkyMaterial_6d8oi")

[sub_resource type="Environment" id="Environment_ph2tj"]
background_mode = 2
background_color = Color(0.129412, 0.0784314, 0.0509804, 1)
sky = SubResource("Sky_pwl78")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_edxg6"]
metallic = 0.6
roughness = 0.11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6xor"]
bg_color = Color(0.509804, 0.509804, 0.509804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.239216, 0.239216, 0.239216, 1)
shadow_size = 5
anti_aliasing = false

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sdm67")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Panel/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(480, 270)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Panel/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
environment = SubResource("Environment_ph2tj")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Panel/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.45058e-09, -1)
material = SubResource("StandardMaterial3D_edxg6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Panel/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[node name="Stuff" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -340.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h6xor")

[node name="Title" type="RichTextLabel" parent="Panel/Stuff"]
layout_mode = 0
offset_left = 10.0
offset_top = -2.0
offset_right = 112.0
offset_bottom = 61.0
theme_override_constants/line_separation = -11
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
text = "[center][b]Horny[/b][/center]
[center][b]Donkey[/b][/center]"
scroll_active = false

[node name="Button" type="VBoxContainer" parent="Panel/Stuff"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 71.0
offset_right = -3.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Play" type="Button" parent="Panel/Stuff/Button"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_8vbhj")
theme_override_font_sizes/font_size = 10
text = "Play"
alignment = 0

[node name="Options" type="Button" parent="Panel/Stuff/Button"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_8vbhj")
theme_override_font_sizes/font_size = 10
text = "Options"
alignment = 0

[node name="LevelSelect" type="Control" parent="Panel/Stuff"]
layout_mode = 1
anchor_left = 0.231343
anchor_top = 0.833333
anchor_right = 0.731343
anchor_bottom = 0.972868
grow_vertical = 2

[node name="TextEdit" type="Panel" parent="Panel/Stuff/LevelSelect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.264223
anchor_right = 0.5
anchor_bottom = 0.264222
offset_left = -33.5
offset_top = -9.512
offset_right = 33.5
offset_bottom = 9.488
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel/Stuff/LevelSelect/TextEdit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0895522
anchor_top = 0.0526316
anchor_right = 0.910448
anchor_bottom = 0.947368
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0mm4n")
theme_override_font_sizes/font_size = 8
text = "DEBUG"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Left" type="Button" parent="Panel/Stuff/LevelSelect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238806
anchor_top = 0.527778
anchor_right = 0.492537
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(12, 12)
theme_override_fonts/font = ExtResource("3_0mm4n")
theme_override_font_sizes/font_size = 8
disabled = true
text = "<"
metadata/_edit_use_anchors_ = true

[node name="Right" type="Button" parent="Panel/Stuff/LevelSelect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.492537
anchor_top = 0.527778
anchor_right = 0.746269
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(12, 12)
theme_override_fonts/font = ExtResource("3_0mm4n")
theme_override_font_sizes/font_size = 8
text = ">"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel/Stuff/LevelSelect"]
layout_mode = 0
offset_left = 3.0
offset_top = -13.0
offset_right = 64.0
offset_bottom = -1.0
theme_override_fonts/font = ExtResource("3_0mm4n")
theme_override_font_sizes/font_size = 8
text = "LEVEL SELECT"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/Stuff/Button/Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Stuff/Button/Options" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Stuff/LevelSelect/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Panel/Stuff/LevelSelect/Right" to="." method="_on_right_pressed"]
